src/modules/70-pipeline/pages/execution/ExecutionPipelineView/ExecutionLogView/StageSelection/StageSelection.module.scss
/*
 * Copyright 2021 Harness Inc. All rights reserved.
 * Use of this source code is governed by the PolyForm Shield 1.0.0 license
 * that can be found in the licenses directory at the root of this repository, also available at
 * https://polyformproject.org/wp-content/uploads/2020/06/PolyForm-Shield-1.0.0.txt.
 */

.mainContainer {
  height: 100%;
  overflow: auto;

  .statusHeader {
    position: sticky;
    top: 0;
    background-color: var(--grey-50);
    padding: var(--spacing-4);
    z-index: 2;
    display: flex;
    align-items: center;
    justify-content: space-between;
    column-gap: var(--spacing-4);
    border-bottom: 1px solid var(--grey-200);
  }

  .heatmap {
    max-width: 150px;
    overflow: auto;
    padding: var(--spacing-3);
  }
}

.mainAccordion {
  & .accordionPanel {
    padding: 0;
    border-bottom: 1px solid var(--grey-200);
    background-color: var(--white);

    &[data-open='true'] {
      background-color: var(--primary-1);
    }
  }

  & .accordionChildPanel {
    padding: 0;
    border-top: 1px solid var(--grey-200);

    &[data-open='true'] {
      background-color: var(--primary-1);
    }
  }

  & .accordionSummary {
    padding: var(--spacing-7) var(--spacing-medium);
    justify-content: space-between;
    gap: var(--spacing-3);

    & > div:first-child {
      flex: 1 0 auto;
    }
  }

  & .accordionChildSummary {
    padding: var(--spacing-6) var(--spacing-medium);
    justify-content: space-between;
  }

  & .accordionDetails {
    padding: 0 0 0 var(--spacing-4);
    :global(.bp3-divider) {
      margin: 0 0 0 5px;
    }
  }

  & .pipelineRollback {
    border-left: 7px solid var(--orange-700);
  }

  .icon {
    margin-right: var(--spacing-3);
  }

  .pipelineRollbackIcon {
    margin-right: var(--spacing-2);
    margin-left: calc(-1 * var(--spacing-1));
  }

  .spinner {
    margin: 0 auto var(--spacing-6);
  }
}

.stageUtil {
  display: flex;
  align-items: center;
}

.stageName {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.inputWaiting {
  --intent-color: var(--orange-900);
  border: var(--orange-900) 1px solid;
  background: var(--yellow-50);
  border-radius: 10px;
  display: inline-flex;
  align-items: center;
  justify-content: center;
  width: 40px;
  height: 24px;
  cursor: pointer;
}

